--- a/po/nl.po
+++ b/po/nl.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eyedropper\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-10 14:09+0200\n"
-"PO-Revision-Date: 2022-10-10 14:23+0200\n"
+"POT-Creation-Date: 2022-10-17 14:35+0200\n"
+"PO-Revision-Date: 2022-10-17 15:21+0200\n"
 "Last-Translator: Philip Goto <philip.goto@gmail.com>\n"
 "Language-Team: none\n"
 "Language: nl\n"
@@ -110,65 +110,9 @@ msgstr "Aangepast kleurformaat"
 msgid "Generated color palettes"
 msgstr "Gegenereerde kleurenpaletten"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:92
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:95
 msgid "FineFindus"
 msgstr "FineFindus"
-
-#: data/resources/ui/color-model-entry.ui:22
-msgctxt "Tooltip of the copy button for format rows"
-msgid "Copy Format"
-msgstr "Formaat kopiëren"
-
-#: data/resources/ui/hex-entry.ui:22
-msgctxt "Tooltip of the copy button for the hex format"
-msgid "Copy Format"
-msgstr "Formaat kopiëren"
-
-#: data/resources/ui/palette_window.ui:5
-msgid "Palettes"
-msgstr "Paletten"
-
-#: data/resources/ui/preferences.ui:10
-msgid "General"
-msgstr "Algemeen"
-
-#: data/resources/ui/preferences.ui:13
-msgid "Formatting"
-msgstr "Opmaak"
-
-#: data/resources/ui/preferences.ui:16
-msgid "Alpha-Value-Position"
-msgstr "Alfawaardelocatie"
-
-#: data/resources/ui/preferences.ui:17
-msgid "Where the Alphavalue is positioned in the Hexstring"
-msgstr "Waar de alfawaarde is gepositioneerd in de hexstring"
-
-#: data/resources/ui/preferences.ui:21
-msgid "None"
-msgstr "Nergens"
-
-#: data/resources/ui/preferences.ui:22
-msgid "End"
-msgstr "Einde"
-
-#: data/resources/ui/preferences.ui:23
-msgid "Start"
-msgstr "Begin"
-
-#: data/resources/ui/preferences.ui:33
-msgid "Color Formats"
-msgstr "Kleurformaten"
-
-#: data/resources/ui/preferences.ui:34
-msgid "Customize the visible formats and in which order they are displayed."
-msgstr ""
-"Pas de zichtbare kleurformaten aan en de volgorde waarin ze zijn weergegeven."
-
-#: data/resources/ui/preferences.ui:38
-msgctxt "Tooltip of the button to reset the format order"
-msgid "Reset Order"
-msgstr "Volgorde resetten"
 
 #: data/resources/ui/shortcuts.ui:11
 msgctxt "shortcut window"
@@ -226,6 +170,239 @@ msgctxt "Tooltip of the colorpicker button"
 msgid "Pick a Color"
 msgstr "Kleur kiezen"
 
+#: data/resources/ui/hex-entry.ui:22
+msgctxt "Tooltip of the copy button for the hex format"
+msgid "Copy Format"
+msgstr "Formaat kopiëren"
+
+#: data/resources/ui/preferences.ui:10
+msgid "General"
+msgstr "Algemeen"
+
+#: data/resources/ui/preferences.ui:13
+msgid "Formatting"
+msgstr "Opmaak"
+
+#: data/resources/ui/preferences.ui:16
+msgid "Alpha-Value-Position"
+msgstr "Alfawaardelocatie"
+
+#: data/resources/ui/preferences.ui:17
+msgid "Where the Alphavalue is positioned in the Hexstring"
+msgstr "Waar de alfawaarde is gepositioneerd in de hexstring"
+
+#: data/resources/ui/preferences.ui:21
+msgctxt "Alpha is not shown"
+msgid "None"
+msgstr "Nergens"
+
+#: data/resources/ui/preferences.ui:22
+msgctxt "Alpha is shown at the end of the string"
+msgid "End"
+msgstr "Einde"
+
+#: data/resources/ui/preferences.ui:23
+msgctxt "Alpha is shown at the start of the string"
+msgid "Start"
+msgstr "Begin"
+
+#: data/resources/ui/preferences.ui:31
+msgid "CIE standard observer"
+msgstr "CIE-standaardwaarnemer"
+
+#: data/resources/ui/preferences.ui:32
+msgid "Field of view used by the CIE standard observer"
+msgstr "Gezichtsveld gebruikt door de CIE-standaardwaarnemer"
+
+#: data/resources/ui/preferences.ui:36
+msgctxt "CIE 2° standard observer"
+msgid "2°"
+msgstr "2°"
+
+#: data/resources/ui/preferences.ui:37
+msgctxt "CIE 10° standard observer"
+msgid "10°"
+msgstr "10°"
+
+#: data/resources/ui/preferences.ui:45
+msgid "CIE illuminants"
+msgstr "CIE-lichtbronnen"
+
+#: data/resources/ui/preferences.ui:46
+msgid "Under which conditions are the colors observed"
+msgstr "Onder welke omstandigheden worden de kleuren waargenomen"
+
+#: data/resources/ui/preferences.ui:50
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "A (Incandescent/tungsten)"
+msgstr "A (gloeiend/wolfraam)"
+
+#: data/resources/ui/preferences.ui:51
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "B (Old direct sunlight at noon)"
+msgstr "B (oud direct middagzonlicht)"
+
+#: data/resources/ui/preferences.ui:52
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "C (Old daylight)"
+msgstr "C (oud daglicht)"
+
+#: data/resources/ui/preferences.ui:53
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D50 (ICC profile PCS)"
+msgstr "D50 (ICC-profiel PCS)"
+
+#: data/resources/ui/preferences.ui:54
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D55 (Mid-morning daylight)"
+msgstr "D55 (daglicht halverwege de ochtend)"
+
+#: data/resources/ui/preferences.ui:55
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D65 (Daylight, sRGB, Adobe-RGB)"
+msgstr "D65 (daglicht, sRGB, Adobe-RGB)"
+
+#: data/resources/ui/preferences.ui:56
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D75 (North sky daylight)"
+msgstr "D75 (daglicht van noordelijke hemel)"
+
+#: data/resources/ui/preferences.ui:57
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "E (Equal energy)"
+msgstr "E (gelijke energie)"
+
+#: data/resources/ui/preferences.ui:58
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F1 (Daylight Fluorescent)"
+msgstr "F1 (daglicht-fluorescerend)"
+
+#: data/resources/ui/preferences.ui:59
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F2 (Cool fluorescent)"
+msgstr "F2 (koel-fluorescerend)"
+
+#: data/resources/ui/preferences.ui:60
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F3 (White Fluorescent)"
+msgstr "F3 (wit-fluorescerend)"
+
+#: data/resources/ui/preferences.ui:61
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F4 (Warm White Fluorescent)"
+msgstr "F4 (warmwit-fluorescerend)"
+
+#: data/resources/ui/preferences.ui:62
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F5 (Daylight Fluorescent)"
+msgstr "F5 (daglicht-fluorescerend)"
+
+#: data/resources/ui/preferences.ui:63
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F6 (Lite White Fluorescent)"
+msgstr "F6 (lichtwit-fluorescerend)"
+
+#: data/resources/ui/preferences.ui:64
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F7 (Daylight fluorescent, D65 simulator)"
+msgstr "F7 (daglicht-fluorescerend, D65-simulator)"
+
+#: data/resources/ui/preferences.ui:65
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F8 (Sylvania F40, D50 simulator)"
+msgstr "F8 (Sylvania F40, D50-simulator)"
+
+#: data/resources/ui/preferences.ui:66
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F9 (Cool White Fluorescent)"
+msgstr "F9 (koelwit-fluorescerend)"
+
+#: data/resources/ui/preferences.ui:67
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F10 (Ultralume 50, Philips TL85)"
+msgstr "F10 (Ultralume 50, Philips TL85)"
+
+#: data/resources/ui/preferences.ui:68
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F11 (Ultralume 40, Philips TL84)"
+msgstr "F11 (Ultralume 40, Philips TL84)"
+
+#: data/resources/ui/preferences.ui:69
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F12 (Ultralume 30, Philips TL83)"
+msgstr "F12 (Ultralume 30, Philips TL83)"
+
+#: data/resources/ui/preferences.ui:77
+msgid "Name Sets"
+msgstr "Naamsets"
+
+#: data/resources/ui/preferences.ui:78
+msgid "Which color name sets should be used for the names"
+msgstr "Welke kleurennaamsets voor de namen moeten worden gebruikt"
+
+#: data/resources/ui/preferences.ui:92
+msgid "Color Formats"
+msgstr "Kleurformaten"
+
+#: data/resources/ui/preferences.ui:93
+msgid "Customize the visible formats and in which order they are displayed."
+msgstr ""
+"Pas de zichtbare kleurformaten aan en de volgorde waarin ze zijn weergegeven."
+
+#: data/resources/ui/preferences.ui:97
+msgctxt "Tooltip of the button to reset the format order"
+msgid "Reset Order"
+msgstr "Volgorde resetten"
+
+#: data/resources/ui/color-format-row.ui:22
+msgctxt "Tooltip of the copy button for format rows"
+msgid "Copy Format"
+msgstr "Formaat kopiëren"
+
+#: data/resources/ui/palette-window.ui:5
+msgid "Palettes"
+msgstr "Paletten"
+
 #. Translators: This should not be translate, Please enter your credits here instead (format: "Name https://example.com" or "Name <email@example.com>", no quotes)
 #: src/widgets/about_window.rs:50
 msgid "translator-credits"
@@ -238,17 +415,22 @@ msgctxt ""
 "closing tag. Since xgettext does not recognize rust multiline strings, this "
 "should be on a single line using line breaks (\\n) for new lines."
 msgid ""
-"<p>This release extends the current available features.</p>\n"
-"<p> Features:</p>\n"
-"<ul><li> A new Palette dialog showing different color palettes</li><li> "
-"Using the new AdwAboutWindow</li><li> Added new translations</li><li>Fixed "
-"minor issues</li></ul>"
+"<p>This release extends the current available features.</p><p> Features:</"
+"p>\n"
+"<ul><li> The name of the color, specified by w3c color keywords and the xkcd "
+"color survey, can now be shown</li><li>Switch the color by entering a color "
+"keyword</li><li> A new Palette dialog showing different color palettes</"
+"li><li>Choose which CIE standard observer is used, as well as it's "
+"illuminant</li><li> Show the CIELCh color format</li><li> Using the new "
+"AdwAboutWindow</li><li> Added new translations</li><li>Fixed minor issues</"
+"li></ul>"
 msgstr ""
-"<p>Deze uitgave breidt uit op de huidige functies.</p>\n"
-"<p>Functies:</p>\n"
-"<ul><li>Een nieuw paletdiaoog welke verschillende kleurenpaletten toont</"
-"li><li>Gebruikt de nieuwe AdwAboutWindow</li><li>Nieuwe vertalingen</"
-"li><li>Kleine fouten opgelost</li></ul>"
+"<p>Deze uitgave breidt uit op de huidige functies.</p><p>Functies:</p>\n"
+"<ul><li>De naam van de kleur, gespecificeerd door W3C-kleurennamen en de "
+"xkcd-kleurenenquête, kan nu getoond worden</li><li>Wissel van kleur door een "
+"kleurennaam in te voeren</li><li>Een nieuw paletdiaoog welke verschillende "
+"kleurenpaletten toont</li><li>Gebruikt de nieuwe AdwAboutWindow</"
+"li><li>Nieuwe vertalingen</li><li>Kleine foutopllossingen</li></ul>"
 
 #: src/widgets/palette_dialog.rs:130
 msgctxt "Name for tints (lighter variants) of the color"
@@ -288,60 +470,100 @@ msgctxt "Color palette consisting of six slight shifted colors"
 msgid "Analogous"
 msgstr "Harmonisch"
 
-#: src/widgets/preferences.rs:228
+#: src/widgets/preferences.rs:147
+msgctxt ""
+"Name of the basic color keyword set from https://www.w3.org/TR/css-color-3/"
+"#html4"
+msgid "Basic"
+msgstr "Basis"
+
+#: src/widgets/preferences.rs:149
+msgid "Show color names from the w3c basic color keyword set"
+msgstr "Geeft kleurnamen weer van de basis-W3C-kleurenset"
+
+#: src/widgets/preferences.rs:155
+msgctxt ""
+"Name of the extended color keyword set from https://www.w3.org/TR/css-"
+"color-3/#svg-color"
+msgid "Extended"
+msgstr "Uitgebreid"
+
+#: src/widgets/preferences.rs:157
+msgid "Show color names from the w3c extended color keyword  set"
+msgstr "Geeft kleurnamen weer van de uitgebruide W3C-kleurenset"
+
+#: src/widgets/preferences.rs:161
+msgctxt "Name of the color set from the xkcd color survey"
+msgid "xkcd"
+msgstr "xkcd"
+
+#: src/widgets/preferences.rs:162
+msgid "Show color names from the xkcd color survey"
+msgstr "Geeft kleurnamen weer van de xkcd-kleurenenquête"
+
+#: src/widgets/preferences.rs:301
 msgid "Move Up"
 msgstr "Naar boven verplaatsen"
 
-#: src/widgets/preferences.rs:230
+#: src/widgets/preferences.rs:303
 msgid "Move Down"
 msgstr "Naar beneden verplaatsen"
 
-#: src/widgets/preferences.rs:347
+#: src/widgets/preferences.rs:423
 msgid "Hex-Code"
 msgstr "Hex-code"
 
-#: src/widgets/preferences.rs:353
+#: src/widgets/preferences.rs:429
 msgid "RGB"
 msgstr "RGB"
 
-#: src/widgets/preferences.rs:359
+#: src/widgets/preferences.rs:435
 msgid "HSL"
 msgstr "HSL"
 
-#: src/widgets/preferences.rs:367
+#: src/widgets/preferences.rs:443
 msgid "HSV"
 msgstr "HSV (KVW)"
 
-#: src/widgets/preferences.rs:376
+#: src/widgets/preferences.rs:452
 msgid "CMYK"
 msgstr "CMYK"
 
-#: src/widgets/preferences.rs:385
+#: src/widgets/preferences.rs:461
 msgid "XYZ"
 msgstr "XYZ"
 
-#: src/widgets/preferences.rs:394
+#: src/widgets/preferences.rs:470
 msgid "CIELAB"
 msgstr "CIELAB"
 
-#: src/widgets/preferences.rs:406
+#: src/widgets/preferences.rs:482
 msgid "HWB"
 msgstr "HWB"
 
-#: src/widgets/preferences.rs:420
+#: src/widgets/preferences.rs:496
 msgid "CIELCh / HCL"
 msgstr "CIELCh / HCL"
 
-#: src/window.rs:485
+#: src/widgets/preferences.rs:503
+msgid "Name"
+msgstr "Naam"
+
+#: src/window.rs:349 src/window.rs:635
+msgctxt "Information that no name for the color could be found"
+msgid "Not named"
+msgstr "Geen naam beschikbaar"
+
+#: src/window.rs:537
 msgid "Failed to get palette color"
 msgstr "Paletkleur verkrijgen mislukt"
 
-#: src/window.rs:505
+#: src/window.rs:557
 msgid "Failed to pick a color"
 msgstr "Kleur kiezen mislukt"
 
 #. Translators: Do not replace the {}. These are used as placeholders for the copied values
-#: src/window.rs:585 src/window.rs:592
+#: src/window.rs:655
 msgid "Copied: “{}”"
 msgstr "‘{}’ gekopieerd"
 
