--- a/po/pt.po
+++ b/po/pt.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the Eyedropper package.
 # swyknox <swyknox@gmail.com>, 2023.
 # Milo Ivir <mail@milotype.de>, 2023.
+# ssantos <ssantos@web.de>, 2025.
 msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://github.com/FineFindus/eyedropper\n"
 "POT-Creation-Date: 2023-11-14 19:29+0000\n"
-"PO-Revision-Date: 2023-12-16 16:35+0000\n"
-"Last-Translator: Milo Ivir <mail@milotype.de>\n"
+"PO-Revision-Date: 2025-04-07 17:05+0000\n"
+"Last-Translator: ssantos <ssantos@web.de>\n"
 "Language-Team: Portuguese <https://hosted.weblate.org/projects/eyedropper/"
 "eyedropper/pt/>\n"
 "Language: pt\n"
@@ -17,14 +18,14 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.3\n"
+"X-Generator: Weblate 5.11-dev\n"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7
 #: data/resources/ui/window.blp:74 src/main.rs:25
 #: src/widgets/about_window.rs:41
 msgid "Eyedropper"
-msgstr ""
+msgstr "Conta-Gotas"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:4
 msgid "Color Picker"
@@ -153,7 +154,7 @@ msgstr "Resetar formato"
 #: data/resources/ui/preferences/name-sources-dialog.blp:5
 #: data/resources/ui/preferences/preferences.blp:29
 msgid "Name Sources"
-msgstr ""
+msgstr "Fontes de nomes"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:17
 msgctxt ""
@@ -164,7 +165,7 @@ msgstr "Básico"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:18
 msgid "Basic web colors"
-msgstr ""
+msgstr "Cores básicas da web"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:22
 msgctxt ""
@@ -175,27 +176,27 @@ msgstr "Estendido"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:23
 msgid "X11 and SVG color values"
-msgstr ""
+msgstr "Valores de cores X11 e SVG"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:27
 msgctxt ""
 "Name of the color set from the GNOME color palette (https://developer.gnome."
 "org/hig/reference/palette.html)"
 msgid "GNOME Color Palette"
-msgstr ""
+msgstr "Paleta de cores do GNOME"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:28
 msgid "Colors for GNOME app icons and illustrations"
-msgstr ""
+msgstr "Cores para ícones e ilustrações de apps GNOME"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:32
 msgctxt "Name of the color set from the xkcd color survey"
 msgid "xkcd Color Survey"
-msgstr ""
+msgstr "Pesquisa de cores xkcd"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:33
 msgid "954 RGB colors named by volunteers"
-msgstr ""
+msgstr "954 cores RGB nomeadas por voluntários"
 
 #: data/resources/ui/preferences/preferences.blp:11
 msgid "General"
@@ -216,21 +217,21 @@ msgstr "Onde o valor alfa é mostrado"
 #: data/resources/ui/preferences/preferences.blp:21
 msgctxt "Alphavalue is not shown"
 msgid "None"
-msgstr ""
+msgstr "Nenhum"
 
 #: data/resources/ui/preferences/preferences.blp:22
 msgctxt "Alphavalue is shown at the end"
 msgid "End"
-msgstr ""
+msgstr "Final"
 
 #: data/resources/ui/preferences/preferences.blp:23
 msgctxt "Alphavalue is shown at the start"
 msgid "Start"
-msgstr ""
+msgstr "Início"
 
 #: data/resources/ui/preferences/preferences.blp:30
 msgid "Sources for displaying color names"
-msgstr ""
+msgstr "Fontes para exibição dos nomes das cores"
 
 #: data/resources/ui/preferences/preferences.blp:41
 #: data/resources/ui/preferences/preferences.blp:49
@@ -580,11 +581,11 @@ msgstr ""
 
 #: src/widgets/color_format_row.rs:190
 msgid "Copied “{}”"
-msgstr ""
+msgstr "“{}” copiado"
 
 #: src/widgets/history_item.rs:118
 msgid "Remove"
-msgstr ""
+msgstr "Remover"
 
 #: src/widgets/palette_dialog.rs:85
 msgctxt "Name for tints (lighter variants) of the color"
