--- a/po/ru.po
+++ b/po/ru.po
@@ -6,22 +6,22 @@
 # Milo Ivir <mail@milotype.de>, 2023.
 # Aleksandr Melman <alexmelman88@gmail.com>, 2025.
 # David Sultaniiazov <x1z53@alt-gnome.ru>, 2025.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-06-06 01:31+0300\n"
-"PO-Revision-Date: 2025-06-06 02:10+0300\n"
-"Last-Translator: David Sultaniiazov <x1z53@alt-gnome.ru>\n"
-"Language-Team: Russian\n"
+"PO-Revision-Date: 2025-06-28 13:05+0000\n"
+"Last-Translator: Aleksandr Melman <alexmelman88@gmail.com>\n"
+"Language-Team: Russian <https://hosted.weblate.org/projects/eyedropper/"
+"eyedropper/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Gtranslator 48.0\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Weblate 5.13-dev\n"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7
@@ -351,7 +351,7 @@ msgstr "Теперь доступны названия цветовой пали
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:163
 msgid "Options to show names of color (from w3c basic, extended and xkcd)"
-msgstr "Теперь доступны названия цветовой палитры GNOME"
+msgstr "Параметры отображения названий цветов (от w3c basic, extended и xkcd)"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:164
 msgid "Change the color by typing a name in the name field"
@@ -395,7 +395,7 @@ msgid ""
 "from the currently picked color as well as the previous 3"
 msgstr ""
 "Палитры, состоящие из темных и светлых оттенков, теперь создаются на основе "
-"текущего выбранного цвета, а также предыдущих 3-х оттенков."
+"текущего выбранного цвета, а также предыдущих 3-х оттенков"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:184
 msgid ""
