--- a/po/cs.po
+++ b/po/cs.po
@@ -3,21 +3,22 @@
 # This file is distributed under the same license as the Eyedropper package.
 # Písek Pískovec <pisekpiskovec@gmail.com>, 2023.
 # Milo Ivir <mail@milotype.de>, 2023.
+# Fjuro <fjuro@alius.cz>, 2025.
 msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://github.com/FineFindus/eyedropper\n"
 "POT-Creation-Date: 2023-11-14 19:29+0000\n"
-"PO-Revision-Date: 2023-12-16 16:35+0000\n"
-"Last-Translator: Milo Ivir <mail@milotype.de>\n"
+"PO-Revision-Date: 2025-07-24 05:03+0000\n"
+"Last-Translator: Fjuro <fjuro@alius.cz>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/eyedropper/"
 "eyedropper/cs/>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
-"X-Generator: Weblate 5.3\n"
+"Plural-Forms: nplurals=3; plural=((n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2);\n"
+"X-Generator: Weblate 5.13-dev\n"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7
@@ -64,7 +65,7 @@ msgstr "Funkce"
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:19
 #: src/widgets/about_window.rs:83
 msgid "Pick a Color"
-msgstr "Vyberte Barvu"
+msgstr "Vybrat barvu"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:20
 #: src/widgets/about_window.rs:84
@@ -152,7 +153,7 @@ msgstr "Resetovat Formát"
 #: data/resources/ui/preferences/name-sources-dialog.blp:5
 #: data/resources/ui/preferences/preferences.blp:29
 msgid "Name Sources"
-msgstr "Zdroje Názvů"
+msgstr "Zdroje názvů"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:17
 msgctxt ""
@@ -174,23 +175,23 @@ msgstr "Rozšířené"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:23
 msgid "X11 and SVG color values"
-msgstr "X11 a SVG hodnoty barev"
+msgstr "Hodnoty barev X11 a SVG"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:27
 msgctxt ""
 "Name of the color set from the GNOME color palette (https://developer.gnome."
 "org/hig/reference/palette.html)"
 msgid "GNOME Color Palette"
-msgstr "barevná paleta GNOME"
+msgstr "Barevná paleta GNOME"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:28
 msgid "Colors for GNOME app icons and illustrations"
-msgstr "Zobrazit názvy barev z barevné palety GNOME"
+msgstr "Barvy ikon a ilustrací aplikací GNOME"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:32
 msgctxt "Name of the color set from the xkcd color survey"
 msgid "xkcd Color Survey"
-msgstr "xkcd Barevný Průzkum"
+msgstr "Barevný průzkum xkcd"
 
 #: data/resources/ui/preferences/name-sources-dialog.blp:33
 msgid "954 RGB colors named by volunteers"
@@ -346,7 +347,7 @@ msgstr "10°"
 
 #: data/resources/ui/preferences/preferences.blp:112
 msgid "Color Formats"
-msgstr "Barevné Formáty"
+msgstr "Formáty barev"
 
 #: data/resources/ui/preferences/preferences.blp:113
 msgid "Customize the visible formats and in which order they are displayed."
@@ -455,11 +456,11 @@ msgstr "Randomizovat Barvu"
 
 #: data/resources/ui/window.blp:7
 msgid "_Clear History"
-msgstr "_Vyčistit Historii"
+msgstr "_Vymazat historii"
 
 #: data/resources/ui/window.blp:12
 msgid "_Random Color"
-msgstr "_Náhodná Barva"
+msgstr "_Náhodná barva"
 
 #: data/resources/ui/window.blp:19
 msgid "_Preferences"
@@ -475,7 +476,7 @@ msgstr "O _aplikaci Eyedropper"
 
 #: data/resources/ui/window.blp:50
 msgid "No Color"
-msgstr "Žádná Barva"
+msgstr "Žádná barva"
 
 #: data/resources/ui/window.blp:51
 msgid "Select a color from the screen to get started."
@@ -488,11 +489,11 @@ msgstr "_Vyberte Barvu"
 #: data/resources/ui/window.blp:78
 msgctxt "Tooltip of the colorpicker button"
 msgid "Pick a Color"
-msgstr "Vyberte Barvu"
+msgstr "Vybrat barvu"
 
 #: data/resources/ui/window.blp:85
 msgid "Main Menu"
-msgstr "Hlavní Nabídka"
+msgstr "Hlavní nabídka"
 
 #: data/resources/ui/window.blp:108
 msgctxt "Tooltip of the palette button"
@@ -505,7 +506,7 @@ msgstr "Kopírovat Název"
 
 #: data/resources/ui/window.blp:133
 msgid "Copy Hex Code"
-msgstr "Kopírovat Hex Kód"
+msgstr "Kopírovat hex kód"
 
 #: data/resources/ui/window.blp:137
 msgid "Copy RGB"
@@ -581,11 +582,11 @@ msgstr ""
 
 #: src/widgets/color_format_row.rs:190
 msgid "Copied “{}”"
-msgstr "Kopírováno: “{}”"
+msgstr "Zkopírováno: „{}“"
 
 #: src/widgets/history_item.rs:118
 msgid "Remove"
-msgstr ""
+msgstr "Odstranit"
 
 #: src/widgets/palette_dialog.rs:85
 msgctxt "Name for tints (lighter variants) of the color"
@@ -627,11 +628,11 @@ msgstr "Analogické"
 
 #: src/widgets/preferences/preferences_window.rs:294
 msgid "Move Up"
-msgstr "Posunout Nahoru"
+msgstr "Posunout nahoru"
 
 #: src/widgets/preferences/preferences_window.rs:296
 msgid "Move Down"
-msgstr "Posunout Dolu"
+msgstr "Posunout dolů"
 
 #: src/widgets/preferences/preferences_window.rs:392
 msgid "Hex-Code"
@@ -697,7 +698,7 @@ msgstr "Oklch"
 
 #: src/window.rs:272
 msgid "Cleared history"
-msgstr "Historie vyčištěna"
+msgstr "Historie vymazána"
 
 #: src/window.rs:273
 msgid "Undo"
