--- a/po/vi.po
+++ b/po/vi.po
@@ -1,22 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the Eyedropper package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# Loc Huynh <huynhloc.contact@gmail.com>, 2025.
 msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://github.com/FineFindus/eyedropper\n"
 "POT-Creation-Date: 2025-11-23 20:01+0000\n"
-"PO-Revision-Date: 2025-11-24 07:03+0700\n"
+"PO-Revision-Date: 2025-11-27 05:01+0000\n"
 "Last-Translator: Loc Huynh <huynhloc.contact@gmail.com>\n"
-"Language-Team: \n"
+"Language-Team: Vietnamese <https://hosted.weblate.org/projects/eyedropper/"
+"eyedropper/vi/>\n"
 "Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.4.2\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Weblate 5.15-dev\n"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7 data/resources/ui/window.blp:38
@@ -36,7 +36,9 @@ msgstr "Chọn và định dạng màu sắc"
 #. Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 #: data/com.github.finefindus.eyedropper.desktop.in.in:11
 msgid "Gnome;GTK;Color;Colorpicker;Picker;Palette;"
-msgstr "Gnome;GTK;Color;Colorpicker;Picker;Palette;"
+msgstr ""
+"Gnome;GTK;Color;Colorpicker;Picker;Palette;Màu sắc;Bộ chọn màu;Bộ chọn;Bảng "
+"màu;"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:10
 msgid "FineFindus"
